--- a/mysite/shopas/templates/base.html
+++ b/mysite/shopas/templates/base.html
@@ -39,6 +39,9 @@
               </svg>
             {{ user.get_username }}</a></li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'my-orders' %}">My Orders</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
       {% else %}
