--- a/mysite/shopas/templates/item_list.html
+++ b/mysite/shopas/templates/item_list.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
-
 {% block title %}Items{% endblock %}
-
 {% block content %}
-
  {% load static %}
     <h1>Shoes:</h1></br>
     {% if items %}
@@ -12,7 +9,7 @@
         <div class="col-md-4 d-flex align-items-stretch">
           <div class="card mb-4 shadow-sm">
             {% if item.photo %}
-              <img src="{{ item.photo.url }}" class="card-img-top" alt="...">
+              <img src="{{ item.photo.url }}" style="margin-bottom: 20px;" class="card-img-top" alt="..."> 
             {% else %}
               <img src="{% static 'img/no-image.png' %}" class="card-img-top">
             {% endif %}
