--- a/mysite/shopas/templates/base.html
+++ b/mysite/shopas/templates/base.html
@@ -26,6 +26,10 @@
           <a href="{% url 'cart' %}">
           <img src="{% static 'images/shopping-cart.png' %}">
         </a>
+	    	<p id="cart-total">0</p>
+        </a>
+          <br>
+          <br>
           <br>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'index' %}">HOME</a>
@@ -43,7 +47,7 @@
               </svg>
             {{ user.get_username }}</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'client-orders' %}">My Orders</a>
+          <a class="nav-link" href="{% url 'user_orders' %}">My Orders</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
