--- a/mysite/shopas/templates/cart.html
+++ b/mysite/shopas/templates/cart.html
@@ -3,5 +3,29 @@
 {% block content %}
 	<div class="row">
 		<div class="col-lg-12">
-            <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back</a>
+            <a  class="btn btn-outline-dark" href="{% url 'items' %}">&#x2190; Back</a>
+
+			<table class="table">
+				<tr>
+					<th><h5>Total:<strong> {{ order.get_cart_total }}</strong></h5></th>
+					<th>
+					</th>
+				</tr>
+			</table>
+			<br>
+			<div class="box-element">
+				<div class="cart-row">
+					<div style="flex:2"></div>
+					<div style="flex:2"><strong>Item: </strong></div>
+					<div style="flex:1"><strong>Price: </strong></div>
+					<div style="flex:1"><strong>Quantity: </strong></div>
+					<div style="flex:1"><strong>Total: </strong></div>
+				</div>
+				{% for item in items %}
+				<div class="row">
+					<div><p>{{ item.name}}</p></div>
+					<div><p>{{ item.price|floatformat:2 }} €</p></div>
+					<div><p>{{ item.qty }}</p></div>
+				</div>
+				{% endfor %}
 {% endblock content %}
